# hanoi-scientific

./: CMakeLists.txt  README.md
.github/workflows/: cmake-multi-platform.yml
include/: frame.hpp  hanoi.hpp  optimization.hpp  optimization_classes.hpp  structs.hpp  task_queue.hpp
sources/: main.cpp
tests/: 03.10.2023.test  e2e_full_answer.cpp
